# Predicao_Churn

./: Churn_Prediction.ipynb  README.md  pyproject.toml
