[tool.poetry]
name = "project 3 - churn prediction"
version = "0.1.0"
description = ""
authors = ["NicolasSP90 <nicolassp90@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
